Package_Tools/include-C/appstream/h/as_suggested.h

#define AS_TYPE_SUGGESTED (as_suggested_get_type ())
/**
 * AsSuggestedKind:
 * @AS_SUGGESTED_KIND_UNKNOWN:		Unknown suggested kind
 * @AS_SUGGESTED_KIND_UPSTREAM:		Suggestions provided by the upstream project.
 * @AS_SUGGESTED_KIND_HEURISTIC:	Suggestions provided by automatic heuristics.
 *
 * The suggested type.
 **/
typedef enum {
	AS_SUGGESTED_KIND_UNKNOWN,
	AS_SUGGESTED_KIND_UPSTREAM,
	AS_SUGGESTED_KIND_HEURISTIC,
	/*< private >*/
	AS_SUGGESTED_KIND_LAST
} AsSuggestedKind;
AsSuggestedKind as_suggested_kind_from_string (const gchar *kind_str);
const gchar    *as_suggested_kind_to_string (AsSuggestedKind kind);
AsSuggested    *as_suggested_new (void);
AsSuggestedKind as_suggested_get_kind (AsSuggested *suggested);
void		as_suggested_set_kind (AsSuggested *suggested, AsSuggestedKind kind);
GPtrArray      *as_suggested_get_ids (AsSuggested *suggested);
void		as_suggested_add_id (AsSuggested *suggested, const gchar *cid);
gboolean	as_suggested_is_valid (AsSuggested *suggested);